# website-source

./: .gitignore  .gitmodules  CNAME  README.md  config.toml  netlify.toml  pyproject.toml
content/: about.md  blurb.md  links.md  services.md
content/blog/: 2014-08-22-hello-world.md  2014-08-31-festival-chatter-part1.md  2014-09-09-festival-chatter-part2.md  2014-10-6-festival-chatter-part3.md  2014-11-25-festival-chatter-part4.md  2015-09-23-start-to-insight.md  2015-09-29-insight-to-interviews.md  2015-10-06-interviews-to-job.md  2017-03-20-analytical-numerical-universal.md  2019-02-12-liberal-physics-phd.md  2021-02-03-feature-stores-as-data-warehouse.md  2022-01-18-autoretraining-is-easy.md  2022-02-01-everything-is-a-package.md  2023-01-10-data-scientists-alone.md  2023-04-10-nn-vs-ann.md  2024-01-14-big-company-bachelors.md  2026-03-09-08-reproducibility.md
content/blog/alignimation/: index.md
content/blog/bayesian-rock-climbing/: index.md
content/blog/confingy/: index.md
content/blog/database-bundling/: index.md
content/blog/ego-identity-rationalization/: index.md
content/blog/explicit-matrix-factorization-sgd-als/: index.md
content/blog/freelance-ds-consulting/: index.md
content/idle/: cold-air-calories.md
content/services/: computer-vision.md  optimization-automation-logistics.md  recommendation-systems.md  time-series-forecasting.md
content/talks/: 2022-normconf.md  2022-nyc-open-data.md  2022-twimlcon.md  2025-data-council.md  2025-prefect.md  dataengconf-2018-scaling-personalization.md  jmu-2019-physics-to-ds.md  model-remodeling.md  pydata-2019-time-series.md  scipy-2019-model-remodeling.md
layouts/_default/: single.html  taxonomy.html  terms.html
layouts/partials/: links.html  services.html
layouts/shortcodes/: event_collector_dashboard.html  figure.html  keynote.html
notebooks/: 2016-01-09-explicit-matrix-factorization-als-sgd.ipynb  2016-10-19-implicit-mf-part-1.ipynb  2016-11-7-implicit-mf-part-2.ipynb  2016-12-5-recasketch-keras.ipynb  2017-06-20-pytorch-matrix-factorization.ipynb  2017-11-06-time-series-intro-statelessness.ipynb  2018-02-01-generative-physics.ipynb  2018-08-06-serverless-integer-programming-test.ipynb  2018-10-01-column-transformer.ipynb  2018-12-07-spacecutter-ordinal-regression.ipynb  2019-02-18-time-series-for-scikit-learn-part-3.ipynb  2019-07-25-production-ml-survey.ipynb  Untitled.ipynb  station_496_availability.pkl
notebooks/.ipynb_checkpoints/: 2015-11-02-intro-to-collaborative-filtering-checkpoint.ipynb  2016-10-19-implicit-mf-part-1-checkpoint.ipynb  2016-11-7-implicit-mf-part-2-checkpoint.ipynb  2016-12-5-recasketch-keras-checkpoint.ipynb  Untitled-checkpoint.ipynb
notebooks/2021-08-20-sandmat/: post.ipynb  pyproject.toml
notebooks/2021-09-28-sandmat/: README.md  post.ipynb  pyproject.toml
notebooks/2021-11-03-alignimation/: post.ipynb
notebooks/2022-04-15-bayesian-rock-climbing/: README.md  post.ipynb  pyproject.toml
notebooks/yaml-ml/: dataset.csv  hello.py  pyproject.toml  yaml_ml.ipynb
static/: _redirects
static/css/: dataframe.css  jupyter.css  slides.css  syntax.css
themes/osprey/: theme.toml
(+257 files in other folders)
