[project]
name = "website-source"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8,<3.9"
dependencies = [
    "nbconvert==5.6.1",
    "nbhugoexporter",
    "traitlets==4.3.3",
    "jinja2==3.0.1",
]

[tool.uv.sources]
nbhugoexporter = { git = "ssh://git@github.com/EthanRosenthal/nb_hugo_exporter", branch = "fix-images" }
