[tool.poetry]
name = "sandmat"
version = "0.1.0"
description = ""
authors = ["EthanRosenthal <ethan@ethanrosenthal.com>"]

[tool.poetry.dependencies]
python = "^3.8"
matplotlib = "^3.4.2"
numpy = "^1.21.1"
beautifulsoup4 = "^4.9.3"
statsmodels = "^0.12.2"
altair = "^4.1.0"

[tool.poetry.dev-dependencies]
ipykernel = "^6.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
